Fixed: System maintenance 'Kill all Sessions, except for your own' button is too big and aligned right (bug#14209).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
@@ -664,6 +664,10 @@ ul.WidgetTooltip li a:hover i {
     text-align: center;
 }
 
+#SystemMaintenanceForm .CallForAction.LittleSpacingTop.Fullsize.Center {
+    width: 248px;
+}
+
 .CallForAction.Fullsize + .FieldExplanation {
     border: 1px solid #ddd;
     padding: 5px;
